Add PS3 controller widget

--- a/sixad/Makefile
+++ b/sixad/Makefile
@@ -9,10 +9,10 @@ all: sixad_bins
 sixad_bins:
 	mkdir -p bins
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-bin.cpp bluetooth.cpp shared.cpp textfile.cpp -o bins/sixad-bin `pkg-config --cflags --libs bluez` -lpthread -fpermissive
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-sixaxis.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp -o bins/sixad-sixaxis -lpthread -lrt
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-sixaxis.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp sharedmem.cpp -o bins/sixad-sixaxis -lpthread -lrt
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-remote.cpp remote.cpp shared.cpp uinput.cpp textfile.cpp -o bins/sixad-remote -lrt
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-raw.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp -o bins/sixad-raw
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-3in1.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp -o bins/sixad-3in1
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-raw.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp sharedmem.cpp -o bins/sixad-raw -lpthread -lrt
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) sixad-3in1.cpp sixaxis.cpp shared.cpp uinput.cpp textfile.cpp sharedmem.cpp -o bins/sixad-3in1  -lpthread -lrt
 
 clean:
 	rm -f *~ bins/*
@@ -25,7 +25,7 @@ install:
 	install -d $(DESTDIR)/usr/sbin/
 	install -d $(DESTDIR)/var/lib/sixad/
 	install -d $(DESTDIR)/var/lib/sixad/profiles/
-	install -m 644 sixad.default $(DESTDIR)/etc/default/sixad
+	install -m 644 sixad.default $(DESTDIR)/etc/default/sixad 
 	install -m 755 sixad.init $(DESTDIR)/etc/init.d/sixad
 	install -m 644 sixad.log $(DESTDIR)/etc/logrotate.d/sixad
 	install -m 755 sixad $(DESTDIR)/usr/bin/
